updated readme, fixed chart margins and overall spacing, fixed toolTips

--- a/Skeleton/assets/css/d3Style.css
+++ b/Skeleton/assets/css/d3Style.css
@@ -21,14 +21,14 @@
   .xactive {
     font-weight: bold;
     fill: #000;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
 
   .xinactive {
     font-weight: lighter;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
@@ -39,7 +39,7 @@
 
   .xinactive2 {
     font-weight: lighter;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
@@ -51,14 +51,14 @@
   .yactive {
     font-weight: bold;
     fill: #000;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
 
   .yinactive {
     font-weight: lighter;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
@@ -69,7 +69,7 @@
 
   .yinactive2 {
     font-weight: lighter;
-    fill: #551aaf;
+    fill: #1d1aaf;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
   }
